Removed display:none from .menu ul as it stopped transitions from working, and placed on li items instead. Also removed padding from .menu.hidden ul as it was causing the ul to still be clickable when collapsed

--- a/styles.css
+++ b/styles.css
@@ -85,14 +85,18 @@ body {
     position: relative; */
 }
 
+/* TODO: Fix ul so that it is not clickable when collapsed! */
 .menu.hidden ul {
     /* testing styles - list item #2 */
     /* https://blog.hubspot.com/website/drop-down-animation */
-    display: none;
+
+    /* fixed clickable hidden elements, but caused animations to stop working */
+    /* display: none; */
+
     height: 0;
     left: 0;
     opacity: 0;
-    /* position: absolute; */
+    padding: 0;
     transition: all 1s ease;
     transform: translateY(0);
     top: 35px;
@@ -107,10 +111,9 @@ body {
     list-style-type: none;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-around; */
+
      /* testing styles - list item #2 */
     /* https://blog.hubspot.com/website/drop-down-animation */
-    /* height: 200px; */
     opacity: 1;
     transition: all 0.5s ease;
     transform: translateY(0);
@@ -120,14 +123,26 @@ body {
     height: 300px;
 }
 
+.group-1.hidden ul li {
+    /* height: 0; */
+    display: none;
+}
+
 .group-2 ul {
     height: 170px;
+}
+
+.group-2.hidden ul li {
+    display: none
 }
 
 .group-3 ul {
     height: 260px;
 }
 
+.group-3.hidden ul li {
+    display: none
+}
 
 
 .menu li {
